ingress-rule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aws9-portal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: www.aws9.pri
    http:
      paths:
      - path: "/shop(/|$)" #www.aws9.pri/shop
        pathType: Prefix
        backend:
          service:
            name: aws9-svc-shop
            port:
              number: 8080
      - path: "/blog(/|$)"
        pathType: Prefix
        backend:
          service:
            name: aws9-svc-blog
            port:
              number: 8080
